--- a/app/assets/stylesheets/_base-vars.css.scss
+++ b/app/assets/stylesheets/_base-vars.css.scss
@@ -5,13 +5,42 @@ $fg-column: 65px;
 $fg-gutter: 20px;
 $fg-max-columns: 12;
 
-$header-height: 50px;
+$header-height: 49px;
 $min-width: 1000px;
 
 $font-size-tiny: 11px;
 $font-size-small: 12px;
+$font-size-med: 14px;
 $font-size-base: 16px;
 $font-size-large: 20px;
 $font-size-huge: 30px;
 
 // Site colors
+$black: #222;
+$grey: #444;
+
+//$bg-color: #EDEDED;
+$bg-color: #fff;
+$bg-shade-1: #F5F5F5;
+$bg-shade-2: #E9E9E9;
+$bg-shade-3: #E2E2E2;
+$bg-shade-4: #CBCBCB;
+$bg-shade-5: #B2B2B2;
+$bg-shade-6: #A3A3A3;
+$bg-shade-7: #6B6B6B;
+$bg-shade-8: #2F2F2F;
+
+$bright-color-1: #EE6364; // red
+$bright-color-2: #FD8A33; // orange
+$bright-color-3: #E4BA2C; // gold
+$bright-color-4: #B7CA63; // green
+$bright-color-5: #62B6E0; // blue
+$bright-color-6: #B080CC; // purple
+$bright-color-7: #E76D9B; // pink
+
+$bg-middle-box: $bg-shade-4;
+$bg-nav: $bg-shade-3;
+$bg-button: $bg-shade-2;
+$text-color: $bg-shade-7;
+
+$side-color-border-width: 5px;
