--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,11 +13,11 @@
         <ul class="user">
           <% if signed_in? %>
           <li><%= link_to 'New Discussion', dashboard_path %></li>
+          <li><%= link_to "Your Discussions", discussions_path, class: 'your-discussions' %></li>
             <li class="dropdown">
               <a class="user-menu" href='#'><%= current_user.email %></a>
               <ul class="menu-content">
-                <li><%= link_to "Your Discussions", discussions_path %></li>
-                <li><%= link_to "Sign out", sign_out_path, :method => :delete %></li>
+                <li><%= link_to "Sign out", sign_out_path, method: 'delete', class: 'sign-out' %></li>
               </ul>
             </li>
           <% else %>
