--- a/app/views/pages/homepage.html.erb
+++ b/app/views/pages/homepage.html.erb
@@ -2,5 +2,5 @@
 <p data-role="description">The best way to get feedback</p>
 
 <section class="call-to-action">
-  <%= link_to "Sign up", sign_up_path %><%= link_to "Sign in", sign_in_path %>
+  <%= link_to "Sign up", sign_up_path, class: 'button sign-up' %><%= link_to "Sign in", sign_in_path, class: 'button sign-in' %>
 </section>
