--- a/app/views/discussions/_chat.html.erb
+++ b/app/views/discussions/_chat.html.erb
@@ -4,7 +4,7 @@
     <script src="http://js.pusher.com/1.11/pusher.min.js" type="text/javascript"></script>
     <%= tag :meta, name: 'discussion_url', content: @discussion.url %>
     <%= tag :meta, name: 'current_user_id', content: current_user.id %>
-    <%= javascript_include_tag :chat %>
+    <%= javascript_include_tag 'discussions/chat' %>
   <% end %>
 
   <ul id="messages">
