Major style / color clean up Pretty much everything is styled now Moved the user-number to the discussion model so it can be used elsewhere Added clearance views so they could be styled The dash board is much more uniform

--- a/app/assets/stylesheets/_base-mixins.css.scss
+++ b/app/assets/stylesheets/_base-mixins.css.scss
@@ -2,3 +2,17 @@
   margin: 0 auto;
   max-width: 1000px;
 }
+
+@mixin chat-color($color) {
+  background-color: $color;
+  color: adjust-color($color,
+    $lightness: -40%,
+    $saturation: -10%);
+}
+
+@mixin mini-button($color) {
+  background: $bg-shade-2;
+  border-top: $top-border-mini-width solid $color;
+  padding: 2px 5px 3px 5px;
+  text-decoration: none;
+}
