--- a/app/assets/stylesheets/_base-vars.css.scss
+++ b/app/assets/stylesheets/_base-vars.css.scss
@@ -18,6 +18,7 @@ $font-size-huge: 30px;
 // Site colors
 $black: #222;
 $grey: #444;
+$white: #fff;
 
 //$bg-color: #EDEDED;
 $bg-color: #fff;
@@ -43,4 +44,5 @@ $bg-nav: $bg-shade-3;
 $bg-button: $bg-shade-2;
 $text-color: $bg-shade-7;
 
-$side-color-border-width: 5px;
+$top-color-border-width: 5px;
+$top-border-mini-width: 3px;
