--- a/app/views/image_subjects/_form.html.erb
+++ b/app/views/image_subjects/_form.html.erb
@@ -12,6 +12,7 @@
       <%= form.file_field :image %>
     </label>
   </div>
+  <div class="drop"></div>
   <div class='action'>
     <%= form.submit 'Discuss', class: 'btn btn-primary' %>
   </div>
