--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -5,9 +5,8 @@ body.dashboards {
     @include position(fixed, $header-height 0px 0px 0px);
 
     div.section-wrap {
-
       h2 {
-        color: $black;
+        color: $grey;
         margin-bottom: 12px;
       }
 
@@ -18,57 +17,68 @@ body.dashboards {
     } // div.section-wrap
 
     section.file {
-      border-right: 1px solid $bg-shade-4;
+      border-right: 3px solid $bg-shade-4;
       @include position(absolute, 0px 50% 0px 0px);
 
-      div.drop {
-        border: 5px dashed $bg-shade-6;
-        border-radius: 37px;
-        margin: 35px auto 0;
-        padding: 40px 20px;
-        @include transition(background-color 1s ease-in-out);
-        width: 60%;
+      div.section-wrap {
+        margin: 0 auto;
+        padding-top: 80px;
+        width: 300px;
 
-        &.hovered {
-          background: $bg-shade-1;
-        }
-
-        div.section-wrap {
-          margin: 0 auto;
-          width: 300px;
-        }
-
-        label.file {
-          background: $bg-shade-3;
-          cursor: pointer;
-          font-size: $font-size-small;
-          overflow: hidden;
-          padding: 17px 9px;
+        div.drop {
+          background: transparent url('/assets/drop.png') no-repeat center 100px;
+          border: 5px dashed $bg-shade-6;
+          @include box-sizing(border-box);
+          height: 250px;
           position: relative;
-          z-index: 1;
+          @include transition(background-color 1s ease-in-out);
 
-          &:hover {
+          &.hovered {
             background: $bg-shade-1;
           }
-        }
 
-        input[type=file] {
-          height: 100%;
-          cursor: pointer;
-          display: inline;
-          opacity: 0;
-          @include position(absolute, 0px 0px 0px 0px);
-          width: auto;
-          z-index: 2;
+          &:before {
+            color: $bg-shade-3;
+            content: "Or drop one";
+            font-size: $font-size-huge;
+            font-weight: bold;
+            @include position(absolute, 40px 0px 0 0px );
+            text-align: center;
+          }
         }
       }
 
-      input[type=submit] {
-        border-color: $bright-color-5;
+      label.file {
+        background: $bg-shade-3;
+        cursor: pointer;
+        font-size: $font-size-small;
+        overflow: hidden;
+        padding: 17px 9px;
+        position: relative;
+        z-index: 1;
+
+        &:hover {
+          background: $bg-shade-1;
+        }
+      }
+
+      input[type=file] {
+        height: 100%;
+        cursor: pointer;
+        display: inline;
+        opacity: 0;
+        @include position(absolute, 0px 0px 0px 0px);
+        width: auto;
+        z-index: 2;
       }
     }
 
+    input[type=submit] {
+      border-color: $bright-color-5;
+    }
+
     section.paste {
+      border-left: 3px solid $bg-shade-4;
       @include position(absolute, 0px 0px 0px 50%);
 
       div.section-wrap {
@@ -78,14 +88,18 @@ body.dashboards {
       }
 
       select {
-        background: $bg-shade-3 url('/assets/select.png') no-repeat 280px 8px;
+        background: $bg-shade-3 url('/assets/select.png') no-repeat 280px 10px;
         border: none;
         border-radius: 0;
         color: $text-color;
         font-size: $font-size-small;
-        padding: 8px 9px;
+        padding: 10px 9px 9px;
         position: relative;
         -webkit-appearance: none;
+      }
+
+      textarea {
+        height: 250px;
       }
 
       input[type=submit] {
@@ -108,3 +122,15 @@ body.dashboards {
     }
   } // div.main-wrap
 } // body.dashboards
+
+body.image_subjects-create {
+  @extend body.dashboards;
+}
+
+body.text_subjects-create {
+  @extend body.dashboards;
+}
+
+div#error-messages {
+  @extend div.flash;
+}
